refactor: use AttendanceView projection for employee queries
- updated employee attendance query methods to return AttendanceView.
- adjusted AttendanceService to handle projection mapping.
- updated AttendanceServiceTest using AttendanceViewStub and fixed assertion logic.